--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -12,6 +12,8 @@ jobs:
       IMAGE_NAME: vertefra/techtrends
       TAG: latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Login
         uses: docker/login-action@v1
         with:
