--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -21,5 +21,5 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and Push
         run: |
-          /app/scripts/build.sh && \
-          /app/scripts/push.sh 
+          bash ./scripts/build.sh && \
+          bash ./scripts/push.sh 
