--- a/project/argocd/helm-techtrends-prod.yaml
+++ b/project/argocd/helm-techtrends-prod.yaml
@@ -7,14 +7,14 @@ spec:
   destination:
     namespace: default
     server: https://kubernetes.default.svc
-  project: techtrends
+  project: default
   source:
     helm:
       valueFiles:
       - values.yaml
       - values-prod.yaml
-      path: helm
-      repoURL: https://github.com/vertefra/udacity-techtrends
-      targetRevision: master
+    path: helm
+    repoURL: https://github.com/vertefra/udacity-techtrends
+    targetRevision: master
 
   syncPolicy: {}
